@@ -156,6 +156,7 @@ Ben Darnell
 Jonathan Dasteel
 John DeGood
 Vincent Delft
+Erik Demaine
 Roger Dev
 Toby Dickenson
 Yves Dionne
